--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/m-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mubasir/portfolio</title>
+    <title>Rashid/portfolio</title>
   </head>
   <body>
     <div id="root"></div>
